Horses can come back.